--- a/addons/loan_collection/views/menu.xml
+++ b/addons/loan_collection/views/menu.xml
@@ -1,22 +1,22 @@
 <odoo>
     <data>
-        <menuitem name="催收" id="menu_root_collection" sequence="3">
-            <menuitem name="催收分单管理" id="menu_collection_submenu_manage" sequence="1">
-                <menuitem name="催收阶段配置" id="menu_collection_stage_setting" sequence="1" action="collection_stage_setting_action" />
-                <menuitem name="分单管理" id="menu_collection_points" sequence="2" action="collection_points_action" />
+        <menuitem name="Collection" id="menu_root_collection" sequence="3">
+            <menuitem name="Collection Case Management" id="menu_collection_submenu_manage" sequence="1">
+                <menuitem name="Collection Phase Configuration" id="menu_collection_stage_setting" sequence="1" action="collection_stage_setting_action" />
+                <menuitem name="Order Allocation Management" id="menu_collection_points" sequence="2" action="collection_points_action" />
             </menuitem>
-            <menuitem name="催收订单管理" id="menu_collection_order_manage" sequence="2">
-                <menuitem name="待分配订单" id="menu_collection_order_allot" sequence="1" action="collection_order_allot_action" />
-                <menuitem name="待处理订单" id="menu_collection_order_pending" sequence="2" action="collection_order_pending_action" />
-                <menuitem name="处理中订单" id="menu_collection_order_process" sequence="3" action="collection_order_process_action" />
+            <menuitem name="Collection Order Management" id="menu_collection_order_manage" sequence="2">
+                <menuitem name="Pending Assignation List" id="menu_collection_order_allot" sequence="1" action="collection_order_allot_action" />
+                <menuitem name="Pending Transaction List" id="menu_collection_order_pending" sequence="2" action="collection_order_pending_action" />
+                <menuitem name="List of Order In Process" id="menu_collection_order_process" sequence="3" action="collection_order_process_action" />
             </menuitem>
-            <menuitem name="金额减免" id="menu_collection_reduction_management" sequence="3">
-                <menuitem name="金额减免审核" id="menu_collection_reduction_examine" sequence="1" action="collection_loan_reduction_examine_action" />
-                <menuitem name="金额减免记录" id="menu_collection_reduction_examine_record" sequence="2" action="collection_reduction_examine_record_action" />
+            <menuitem name="Amount Remission" id="menu_collection_reduction_management" sequence="3">
+                <menuitem name="Review of Amount Remission" id="menu_collection_reduction_examine" sequence="1" action="act_derate_record_col_s1" />
+                <menuitem name="Amount Remission Record" id="menu_collection_reduction_examine_record" sequence="2" action="act_derate_record_col" />
             </menuitem>
-            <menuitem name="补单记录" id="menu_replenishment_record" sequence="4" action="replenishment_record_action" />
-            <!--<menuitem name="展期记录" id="menu_collection_extension_record" sequence="5" action="extension_record_action" />-->
-            <menuitem name="黑名单管理" id="menu_blacklist_management" sequence="6" action="blacklist_management_action" />
+            <menuitem name="Reorder Record" id="menu_replenishment_record" sequence="4" action="act_additional_record_col" />
+            <menuitem name="Extension Record" id="menu_collection_extension_record" sequence="5" action="act_extension_record_col" />
+            <menuitem name="Blacklist managemen" id="menu_blacklist_management" sequence="6" action="loan_financial.act_black_list" />
         </menuitem>
     </data>
 </odoo>
